--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "morgan": "^1.8.1",
     "nunjucks": "^3.0.0",
     "pg": "^6.1.4",
-    "pg-hstore": "^2.3.2"
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.30.2"
+  },
+  "devDependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.0"
   }
 }
