--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start:production": "node app.js",
+    "start:dev": "nodemon -e html,css,js app.js",
+    "start": "npm run start:dev",
+    "build:css": "node-sass -w -r assets/stylesheets -o public/stylesheets"
+
   },
   "repository": {
     "type": "git",
@@ -28,6 +32,7 @@
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.0"
+    "jquery": "^3.2.0",
+    "node-sass": "^4.5.0"
   }
 }
